fix: table overflow-x auto

--- a/src/.vitepress/theme/styles/custom.css
+++ b/src/.vitepress/theme/styles/custom.css
@@ -2,7 +2,7 @@
 
 .el-descriptions {
   display: block;
-  overflow-x: scroll;
+  overflow-x: auto;
 }
 
 .el-descriptions table {
